[package]
name = "conduit"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.12", features = ["tokio", "debug"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
pnet = "0.34"
uuid = { version = "1.0", features = ["v4"] }
