[package]
name = "conduit"
version = "0.2.2"
edition = "2024"

[dependencies]
iced = { version = "0.12", features = ["tokio", "debug", "image"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
pnet = "0.34"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
